# opentracing-c-wrapper

./: .gitignore  COPYING  ChangeLog  LICENSE  Makefile.am  README  VERSION  configure.ac  opentracing-c-wrapper.pc.in  opentracing-c-wrapper_dbg.pc.in
include/: dbg_malloc.h  define.h  include.h  span.h  tracer.h  util.h  version.h.in
include/opentracing-c-wrapper/: common.h  dbg_malloc.h  define.h  include.h  propagation.h  span.h  tracer.h  util.h  value.h
m4/: am-common.m4  am-with-opentracing.m4
scripts/: bootstrap  distclean
src/: Makefile.am  dbg_malloc.cpp  export.map  export_dbg.map  span.cpp  tracer.cpp  util.cpp
test/: Makefile.am  cfg-dd.json  cfg-jaeger.yml  cfg-zipkin.json  debug.h  define.h  include.h  opentracing.c  opentracing.h  test.c  util.c  util.h
